# Genius-TCAD-Open

./: .gitignore  CMakeLists.txt  brkpnts.txt  myinstall.txt
cmake/: FindPETSc.cmake  config.h.in
doc/: developer_guide.md
include/: brkpnts.h  config.h
include/base/: genius_env.h  memory_log.h  variant_filter_iterator.h
include/enums/: enum_petsc_type.h
include/geom/: elem.h
include/mesh/: mesh_base.h
include/meshgen/: skeleton.h
include/solver/: ddm_solver.h  fvm_flex_nonlinear_solver.h  fvm_linear_solver.h  fvm_nonlinear_solver.h  solver_base.h
include/solver/ddm1/: ddm1.h
include/utils/: monot_cubic_interpolator.h
lib/: GeniusSyntax.xml
src/: CMakeLists.txt  main.cc
src/base/: CMakeLists.txt  genius_env.cc  memory_log.cc
src/bc/: CMakeLists.txt
src/contrib/: CMakeLists.txt
src/contrib/ann/: CMakeLists.txt
src/contrib/ann/ANN/: ANN.h
src/contrib/brkpnts/: CMakeLists.txt  brkpnts.c
src/contrib/csabathy/: CMakeLists.txt
src/contrib/dfise/: CMakeLists.txt  dfise_block.h  dfise_dump.cc  dfise_lex.yy.c  dfise_parser.output  dfise_parser.tab.c  dfise_parser.tab.h  dfise_parser.y
src/contrib/expreval/: CMakeLists.txt
src/contrib/klu/: CMakeLists.txt
src/contrib/metis/: CMakeLists.txt
src/contrib/mxml/: CMakeLists.txt  mxml-file.c
src/contrib/nn/: CMakeLists.txt
src/contrib/spice/: CMakeLists.txt  spice_ckt.cc
src/contrib/spline/: CMakeLists.txt
src/contrib/stanford/: CMakeLists.txt
src/contrib/tif/: CMakeLists.txt  tif_lex.yy.c  tif_parser.output  tif_parser.tab.c  tif_parser.tab.h  tif_parser.y
src/contrib/tif3d/: CMakeLists.txt
src/contrib/trex/: CMakeLists.txt
src/contrib/triangle/: CMakeLists.txt  triangle.c
src/fe/: CMakeLists.txt
src/geom/: CMakeLists.txt  elem.cc
src/hook/: CMakeLists.txt  ddm_monitor_hook.cc  dlhook.cc  gnuplot_hook.cc  injection_hook.cc  interface_current_hook.cc  mob_monitor_hook.cc
src/interpolation/: CMakeLists.txt
src/material/: CMakeLists.txt  material.cc  material_define.cc
src/math/: CMakeLists.txt  petsc_type.cc
src/mesh/: CMakeLists.txt
src/meshgen/: CMakeLists.txt  mesh_generation_tri3.cc
src/parser/: CMakeLists.txt  input.output  input.tab.c  input.tab.h  input.y  input.yy.c  pattern.output  pattern.tab.c  pattern.tab.h  pattern.y  pattern.yy.c
src/partition/: CMakeLists.txt
src/quadrature/: CMakeLists.txt
src/solution/: CMakeLists.txt  cgns_io.cc  vtk2_io.cc  vtk_io.cc
src/solver/: CMakeLists.txt  fem_linear_solver.cc  fvm_flex_nonlinear_solver.cc  fvm_linear_solver.cc  fvm_nonlinear_solver.cc
src/solver/ddm1/: CMakeLists.txt  ddm1.cc
src/solver/ddm2/: CMakeLists.txt
src/solver/ddm_ac/: CMakeLists.txt
src/solver/ddm_common/: CMakeLists.txt
src/solver/dg/: CMakeLists.txt
src/solver/doping_analytic/: CMakeLists.txt
src/solver/ebm3/: CMakeLists.txt
src/solver/emfem2d/: CMakeLists.txt
src/solver/hall/: CMakeLists.txt
src/solver/mix1/: CMakeLists.txt
src/solver/mixA1/: CMakeLists.txt
src/solver/mixA2/: CMakeLists.txt
src/solver/mixA3/: CMakeLists.txt
src/solver/mole_analytic/: CMakeLists.txt
src/solver/poisson/: CMakeLists.txt
src/solver/ray_tracing/: CMakeLists.txt
src/solver/stress_solver/: CMakeLists.txt
src/source/: CMakeLists.txt  electrical_source.cc  waveform.cc
src/utils/: CMakeLists.txt  monot_cubic_interpolator.cc
