add_subdirectory(brkpnts)
add_subdirectory(ann)
add_subdirectory(csabathy)
add_subdirectory(dfise)
add_subdirectory(expreval)
# kdtree is header-only, no build needed
add_subdirectory(klu)
# metis is disabled
add_subdirectory(mxml)
add_subdirectory(nn)
# qshep is disabled
add_subdirectory(spice)
add_subdirectory(spline)
add_subdirectory(stanford)
add_subdirectory(tif)
add_subdirectory(tif3d)
add_subdirectory(trex)
add_subdirectory(triangle)

